--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .git
 prepros-6.config
-css/prepros-6.config
-css/layout
-css/sections
-css/main.scss
+/css/prepros-6.config
+/css/layout
+/css/sections
+/css/main.scss
